# gamepad_lib

./: CMakeLists.txt  README.md
controller/xbox/: xbox_controller.cpp
include/controller/xbox/: xbox_controller.h
include/gamepad/: Gamepad.h  gamepad.h  gamepad_handler.h  gamepad_types.h
lib/: CMakeLists.txt  README.md
lib/include/: gamepad_private.h
lib/src/: Gamepad_linux.c  Gamepad_private.c  Gamepad_windows.c
src/: Gamepad_linux.c  Gamepad_macosx.c  Gamepad_private.c  gamepad.cpp  gamepad_handler.cpp
